Remove use of Class.newInstance()
This method has been deprecated in JDK9+, use its simple replacement
instead.

Change-Id: I1f7ed3babd4b339d1b1a9cc396b901e7886c985a
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>